docs: update readme links

--- a/documentation/modules/_commands_command_.html
+++ b/documentation/modules/_commands_command_.html
@@ -98,7 +98,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/command.ts:62</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L62">commands/command.ts:62</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -147,7 +147,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/command.ts:29</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L29">commands/command.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -178,12 +178,12 @@
 					<div class="tsd-signature tsd-kind-icon">command<wbr>List<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in commands/command.ts:38</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L38">commands/command.ts:38</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p><code>commandList</code> validation dictionar</p>
+							<p><code>commandList</code> validation dictionary</p>
 						</div>
 						<dl class="tsd-comment-tags">
 							<dt>remarks</dt>
@@ -198,7 +198,7 @@
 						<div class="tsd-signature tsd-kind-icon">LEFT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">left</span><span class="tsd-signature-symbol"> = left</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in commands/command.ts:43</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L43">commands/command.ts:43</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -208,7 +208,7 @@
 						<div class="tsd-signature tsd-kind-icon">MOVE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">move</span><span class="tsd-signature-symbol"> = move</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in commands/command.ts:41</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L41">commands/command.ts:41</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -218,7 +218,7 @@
 						<div class="tsd-signature tsd-kind-icon">PLACE<span class="tsd-signature-symbol">:</span> <a href="_commands_command_.html#noop" class="tsd-signature-type">noop</a><span class="tsd-signature-symbol"> = noop</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in commands/command.ts:40</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L40">commands/command.ts:40</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -228,7 +228,7 @@
 						<div class="tsd-signature tsd-kind-icon">REPORT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">report</span><span class="tsd-signature-symbol"> = report</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in commands/command.ts:44</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L44">commands/command.ts:44</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -238,7 +238,7 @@
 						<div class="tsd-signature tsd-kind-icon">RIGHT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">right</span><span class="tsd-signature-symbol"> = right</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in commands/command.ts:42</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/command.ts#L42">commands/command.ts:42</a></li>
 							</ul>
 						</aside>
 					</section>
