--- a/documentation/modules/_commands_report_.html
+++ b/documentation/modules/_commands_report_.html
@@ -91,7 +91,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/report.ts:15</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/report.ts#L15">commands/report.ts:15</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
