--- a/documentation/modules/_utils_movements_.html
+++ b/documentation/modules/_utils_movements_.html
@@ -96,7 +96,7 @@
 					<div class="tsd-signature tsd-kind-icon">Face<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"NORTH"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"EAST"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"SOUTH"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"WEST"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/movements.ts:1</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L1">utils/movements.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">Move<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>EAST<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#movement" class="tsd-signature-type">Movement</a><span class="tsd-signature-symbol">; </span>NORTH<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#movement" class="tsd-signature-type">Movement</a><span class="tsd-signature-symbol">; </span>SOUTH<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#movement" class="tsd-signature-type">Movement</a><span class="tsd-signature-symbol">; </span>WEST<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#movement" class="tsd-signature-type">Movement</a><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/movements.ts:12</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L12">utils/movements.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -133,7 +133,7 @@
 					<div class="tsd-signature tsd-kind-icon">Movement<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>LEFT<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#face" class="tsd-signature-type">Face</a><span class="tsd-signature-symbol">; </span>RIGHT<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#face" class="tsd-signature-type">Face</a><span class="tsd-signature-symbol">; </span>x<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#step" class="tsd-signature-type">Step</a><span class="tsd-signature-symbol">; </span>y<span class="tsd-signature-symbol">: </span><a href="_utils_movements_.html#step" class="tsd-signature-type">Step</a><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/movements.ts:5</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L5">utils/movements.ts:5</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -160,7 +160,7 @@
 					<div class="tsd-signature tsd-kind-icon">Step<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">-1</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/movements.ts:3</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L3">utils/movements.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -173,7 +173,7 @@
 					<div class="tsd-signature tsd-kind-icon">move<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/movements.ts:19</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L19">utils/movements.ts:19</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-object-literal">
@@ -182,7 +182,7 @@
 						<div class="tsd-signature tsd-kind-icon">EAST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in utils/movements.ts:21</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L21">utils/movements.ts:21</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -191,7 +191,7 @@
 							<div class="tsd-signature tsd-kind-icon">LEFT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"SOUTH"</span><span class="tsd-signature-symbol"> = &quot;SOUTH&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:21</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L21">utils/movements.ts:21</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -201,7 +201,7 @@
 							<div class="tsd-signature tsd-kind-icon">RIGHT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"SOUTH"</span><span class="tsd-signature-symbol"> = &quot;SOUTH&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:21</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L21">utils/movements.ts:21</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -211,7 +211,7 @@
 							<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">1</span><span class="tsd-signature-symbol"> = 1</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:21</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L21">utils/movements.ts:21</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -221,7 +221,7 @@
 							<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> = 0</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:21</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L21">utils/movements.ts:21</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -232,7 +232,7 @@
 						<div class="tsd-signature tsd-kind-icon">NORTH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in utils/movements.ts:20</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L20">utils/movements.ts:20</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -241,7 +241,7 @@
 							<div class="tsd-signature tsd-kind-icon">LEFT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"WEST"</span><span class="tsd-signature-symbol"> = &quot;WEST&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:20</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L20">utils/movements.ts:20</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -251,7 +251,7 @@
 							<div class="tsd-signature tsd-kind-icon">RIGHT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"EAST"</span><span class="tsd-signature-symbol"> = &quot;EAST&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:20</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L20">utils/movements.ts:20</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -261,7 +261,7 @@
 							<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> = 0</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:20</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L20">utils/movements.ts:20</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -271,7 +271,7 @@
 							<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">1</span><span class="tsd-signature-symbol"> = 1</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:20</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L20">utils/movements.ts:20</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -282,7 +282,7 @@
 						<div class="tsd-signature tsd-kind-icon">SOUTH<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in utils/movements.ts:22</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L22">utils/movements.ts:22</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -291,7 +291,7 @@
 							<div class="tsd-signature tsd-kind-icon">LEFT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"EAST"</span><span class="tsd-signature-symbol"> = &quot;EAST&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L22">utils/movements.ts:22</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -301,7 +301,7 @@
 							<div class="tsd-signature tsd-kind-icon">RIGHT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"WEST"</span><span class="tsd-signature-symbol"> = &quot;WEST&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L22">utils/movements.ts:22</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -311,7 +311,7 @@
 							<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> = 0</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L22">utils/movements.ts:22</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -321,7 +321,7 @@
 							<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">-1</span><span class="tsd-signature-symbol"> = -1</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L22">utils/movements.ts:22</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -332,7 +332,7 @@
 						<div class="tsd-signature tsd-kind-icon">WEST<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in utils/movements.ts:23</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L23">utils/movements.ts:23</a></li>
 							</ul>
 						</aside>
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -341,7 +341,7 @@
 							<div class="tsd-signature tsd-kind-icon">LEFT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"NORTH"</span><span class="tsd-signature-symbol"> = &quot;NORTH&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:23</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L23">utils/movements.ts:23</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -351,7 +351,7 @@
 							<div class="tsd-signature tsd-kind-icon">RIGHT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"NORTH"</span><span class="tsd-signature-symbol"> = &quot;NORTH&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:23</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L23">utils/movements.ts:23</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -361,7 +361,7 @@
 							<div class="tsd-signature tsd-kind-icon">x<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">-1</span><span class="tsd-signature-symbol"> = -1</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:23</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L23">utils/movements.ts:23</a></li>
 								</ul>
 							</aside>
 						</section>
@@ -371,7 +371,7 @@
 							<div class="tsd-signature tsd-kind-icon">y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">0</span><span class="tsd-signature-symbol"> = 0</span></div>
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/movements.ts:23</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/movements.ts#L23">utils/movements.ts:23</a></li>
 								</ul>
 							</aside>
 						</section>
