--- a/documentation/modules/_utils_validations_.html
+++ b/documentation/modules/_utils_validations_.html
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">Valid<wbr>Instructions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"PLACE"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"MOVE"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"RIGHT"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"LEFT"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"REPORT"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:10</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L10">utils/validations.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,7 +119,7 @@
 					<div class="tsd-signature tsd-kind-icon">check<wbr>IsValid<wbr>Face<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">(Anonymous function)</span><span class="tsd-signature-symbol"> = getIsValid(validFaces)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:54</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L54">utils/validations.ts:54</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -145,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">check<wbr>IsValid<wbr>Instruction<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">(Anonymous function)</span><span class="tsd-signature-symbol"> = getIsValid(validInstructions)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:40</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L40">utils/validations.ts:40</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">check<wbr>IsValid<wbr>Range<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">(Anonymous function)</span><span class="tsd-signature-symbol"> = getIsValid(validSquares)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:70</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L70">utils/validations.ts:70</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 					<div class="tsd-signature tsd-kind-icon">valid<wbr>Faces<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;NORTH&#x27;, &#x27;EAST&#x27;, &#x27;SOUTH&#x27;, &#x27;WEST&#x27;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:1</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L1">utils/validations.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -208,7 +208,7 @@
 					<div class="tsd-signature tsd-kind-icon">valid<wbr>Instructions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;PLACE&#x27;,&#x27;MOVE&#x27;,&#x27;RIGHT&#x27;,&#x27;LEFT&#x27;,&#x27;REPORT&#x27;,]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:3</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L3">utils/validations.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -218,7 +218,7 @@
 					<div class="tsd-signature tsd-kind-icon">valid<wbr>Squares<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">readonly </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;0&#x27;, &#x27;1&#x27;, &#x27;2&#x27;, &#x27;3&#x27;, &#x27;4&#x27;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in utils/validations.ts:13</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L13">utils/validations.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -235,7 +235,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/validations.ts:87</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L87">utils/validations.ts:87</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -283,7 +283,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/validations.ts:104</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L104">utils/validations.ts:104</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -321,7 +321,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in utils/validations.ts:25</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/utils/validations.ts#L25">utils/validations.ts:25</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
