--- a/documentation/modules/_commands_place_.html
+++ b/documentation/modules/_commands_place_.html
@@ -91,7 +91,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/place.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/place.ts#L22">commands/place.ts:22</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
