--- a/documentation/modules/_commands_turn_.html
+++ b/documentation/modules/_commands_turn_.html
@@ -95,7 +95,7 @@
 					<div class="tsd-signature tsd-kind-icon">Turn<wbr>Direction<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"LEFT"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"RIGHT"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in commands/turn.ts:3</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/turn.ts#L3">commands/turn.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/turn.ts:23</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/turn.ts#L23">commands/turn.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -135,7 +135,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/turn.ts:22</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/turn.ts#L22">commands/turn.ts:22</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -158,7 +158,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in commands/turn.ts:13</li>
+									<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/commands/turn.ts#L13">commands/turn.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
