--- a/documentation/modules/_state_.html
+++ b/documentation/modules/_state_.html
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">Coordinate<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>x<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>y<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:2</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L2">state.ts:2</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -125,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">Current<wbr>Face<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"NORTH"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"EAST"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"SOUTH"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"WEST"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:1</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L1">state.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -135,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">Position<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><a href="_state_.html#coordinate" class="tsd-signature-type">Coordinate</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:3</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L3">state.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -145,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">State<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>currentFace<span class="tsd-signature-symbol">: </span><a href="_state_.html#currentface" class="tsd-signature-type">CurrentFace</a><span class="tsd-signature-symbol">; </span>isPlaced<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>position<span class="tsd-signature-symbol">: </span><a href="_state_.html#position" class="tsd-signature-type">Position</a><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:9</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L9">state.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -172,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">current<wbr>Face<span class="tsd-signature-symbol">:</span> <a href="_state_.html#currentface" class="tsd-signature-type">CurrentFace</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:5</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L5">state.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Placed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:7</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L7">state.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -192,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">position<span class="tsd-signature-symbol">:</span> <a href="_state_.html#position" class="tsd-signature-type">Position</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:6</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L6">state.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -205,7 +205,7 @@
 					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in state.ts:14</li>
+							<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L14">state.ts:14</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -214,7 +214,7 @@
 						<div class="tsd-signature tsd-kind-icon">current<wbr>Face<span class="tsd-signature-symbol">:</span> <a href="_state_.html#currentface" class="tsd-signature-type">CurrentFace</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in state.ts:15</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L15">state.ts:15</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -224,7 +224,7 @@
 						<div class="tsd-signature tsd-kind-icon">is<wbr>Placed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in state.ts:17</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L17">state.ts:17</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -234,7 +234,7 @@
 						<div class="tsd-signature tsd-kind-icon">position<span class="tsd-signature-symbol">:</span> <a href="_state_.html#position" class="tsd-signature-type">Position</a></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in state.ts:16</li>
+								<li>Defined in <a href="https://github.com/vast-coding/toy-robot/blob/d4a2f8a/src/state.ts#L16">state.ts:16</a></li>
 							</ul>
 						</aside>
 					</section>
