--- a/documentation/index.html
+++ b/documentation/index.html
@@ -78,15 +78,17 @@
 					</li>
 					<li><p><a href="https://toy-robot-test-coverage.vercel.app/">test coverage</a></p>
 					</li>
+					<li><p><a href="https://toy-robot-documentation.vercel.app/">TypeDoc documentation</a></p>
+					</li>
 				</ul>
 				<p>Output and control is by terminal.</p>
 				<a href="#commands" id="commands" style="color: inherit; text-decoration: none;">
 					<h2>Commands</h2>
 				</a>
-				<p>A list of commands are in the src/input.txt file.</p>
-				<p>Starting the simulation by running <code>npm run dev</code> will execute each command in this list, line by line.</p>
+				<p>A list of commands are in the <code>src/input.txt</code> file.</p>
+				<p>Starting the simulation by running <code>npm run dev</code> will execute each command in this test file, line by line.</p>
 				<ul>
-					<li><p><code>PLACE</code> - initial command to place Robot on board. All other commands are ignored until initial <code>PLACE</code> command.</p>
+					<li><p><code>PLACE</code> - initial command to place Robot on board. All other commands are ignored until initial valid <code>PLACE</code> command.</p>
 					</li>
 					<li><p><code>MOVE</code> - move one unit forward in current direction. Falling off edge is prevented.</p>
 					</li>
@@ -102,29 +104,40 @@
 					<li>Mac OSX</li>
 					<li>Node 14.15.1</li>
 					<li>Typescript</li>
+					<li>Jest</li>
 				</ul>
 				<a href="#installation" id="installation" style="color: inherit; text-decoration: none;">
 					<h2>Installation</h2>
 				</a>
 				<ol>
-					<li>Clone the repository: <code>git clone https://github.com/vast-coding/toy-robot.git</code></li>
-					<li>Run <code>npm install</code> inside folder</li>
-					<li>Running application:<ol>
-							<li>To run robot simulation in terminal: <code>npm run dev</code> <em>(uses watch mode, so updating <code>src/data/input.txt</code> will refresh results)</em></li>
-							<li>tests<ol>
+					<li><p>Clone the repository: <code>git clone https://github.com/vast-coding/toy-robot.git</code></p>
+					</li>
+					<li><p>Run <code>npm install</code> inside folder</p>
+					</li>
+					<li><p>Running application:</p>
+						<ol>
+							<li><p>To run robot simulation in terminal: <code>npm run dev</code> <em>(uses watch mode, so updating <code>src/data/input.txt</code> will refresh results)</em></p>
+							</li>
+							<li><p>tests</p>
+								<ul>
 									<li>to run tests: <code>npm run test</code></li>
 									<li>to see the test results in browser, simply open <a href="https://toy-robot-test-coverage.vercel.app/">test coverage</a> or run tests again to generate new results locally.</li>
-								</ol>
+								</ul>
 							</li>
 						</ol>
 					</li>
-					<li>Robot instructions are in <code>src/data/input.txt</code>. You can edit this file, and see live changes. <em>be sure to use <code>npm run dev</code> first</em></li>
+					<li><p>Robot instructions are in <code>src/data/input.txt</code>. You can edit this file, and see live changes. <em>be sure to use <code>npm run dev</code> first</em></p>
+					</li>
 				</ol>
 				<a href="#other-terminal-commands" id="other-terminal-commands" style="color: inherit; text-decoration: none;">
 					<h3>Other terminal commands</h3>
 				</a>
-				<p><code>npm run test:watch</code> for developement and debugging
-				<code>npm run docs</code> generate documentation using typedocs</p>
+				<ul>
+					<li><p><code>npm run test:watch</code> for developement and debugging</p>
+					</li>
+					<li><p><code>npm run docs</code> generate documentation using TypeDoc</p>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
