docs: update readme again

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -86,7 +86,7 @@
 					<h2>Commands</h2>
 				</a>
 				<p>A list of commands to run are in the <code>src/data/input.txt</code> file.</p>
-				<p>Starting the simulation by running <code>npm run start</code> will execute each command in this test file, line by line. Editing this file will update the results in the terminal.</p>
+				<p>Starting the simulation will execute each command in this test file, line by line. Editing this file will update the results in the terminal.</p>
 				<ul>
 					<li><p><code>PLACE</code> - initial command to place Robot on board. All other commands are ignored until initial valid <code>PLACE</code> command.</p>
 					</li>
@@ -126,19 +126,17 @@
 				<ul>
 					<li>to run tests: <code>npm run test</code></li>
 					<li>to run tests in watch mode: <code>npm run test:watch</code></li>
-					<li>to see the test results in browser, simply open <a href="https://toy-robot-tests-coverage-report.vercel.app">test coverage</a> or run tests again to generate new results locally.</li>
+					<li>to see the test results in the browser, simply open <a href="https://toy-robot-tests-coverage-report.vercel.app">test coverage</a> or run tests again to generate new results locally.</li>
 				</ul>
-				<ol>
-					<li>Robot instructions are in <code>src/data/input.txt</code>. You can edit this file, and see live changes. <em>be sure to use <code>npm run start</code> first</em></li>
-				</ol>
+				<a href="#updating-instructions" id="updating-instructions" style="color: inherit; text-decoration: none;">
+					<h3>Updating instructions</h3>
+				</a>
+				<p>Robot instructions are in <code>src/data/input.txt</code>. You can edit this file, and see live changes. <em>be sure to use <code>npm run start</code> first</em></p>
 				<a href="#other-terminal-commands" id="other-terminal-commands" style="color: inherit; text-decoration: none;">
 					<h3>Other terminal commands</h3>
 				</a>
 				<ul>
-					<li><p><code>npm run test:watch</code> for developement and debugging</p>
-					</li>
-					<li><p><code>npm run docs</code> generate documentation using TypeDoc</p>
-					</li>
+					<li><code>npm run docs</code> generate documentation using TypeDoc</li>
 				</ul>
 			</div>
 		</div>
