--- a/documentation/index.html
+++ b/documentation/index.html
@@ -86,7 +86,7 @@
 					<h2>Commands</h2>
 				</a>
 				<p>A list of commands to run are in the <code>src/data/input.txt</code> file.</p>
-				<p>Starting the simulation will execute each command in this test file, line by line. Editing this file will update the results in the terminal.</p>
+				<p>Starting the simulation will execute each command in this text file, line by line. Editing this file will update the results in the terminal.</p>
 				<ul>
 					<li><p><code>PLACE</code> - initial command to place Robot on board. All other commands are ignored until initial valid <code>PLACE</code> command.</p>
 					</li>
@@ -121,7 +121,7 @@
 					<li>Modify the data in <code>src/data/input.txt</code>, results will refresh immediately in terminal</li>
 				</ol>
 				<a href="#tests" id="tests" style="color: inherit; text-decoration: none;">
-					<h3>tests</h3>
+					<h3>Tests</h3>
 				</a>
 				<ul>
 					<li>to run tests: <code>npm run test</code></li>
@@ -131,7 +131,7 @@
 				<a href="#updating-instructions" id="updating-instructions" style="color: inherit; text-decoration: none;">
 					<h3>Updating instructions</h3>
 				</a>
-				<p>Robot instructions are in <code>src/data/input.txt</code>. You can edit this file, and see live changes. <em>be sure to use <code>npm run start</code> first</em></p>
+				<p>Robot instructions are in <code>src/data/input.txt</code>. You can edit and save this file, and see resulting live changes in the terminal. <em>be sure to use <code>npm run start</code> first</em></p>
 				<a href="#other-terminal-commands" id="other-terminal-commands" style="color: inherit; text-decoration: none;">
 					<h3>Other terminal commands</h3>
 				</a>
